--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "storybook": "start-storybook -p 6006 -s public",
-    "build-storybook": "build-storybook -s public"
+    "build-storybook": "build-storybook -s public",
+    "chromatic": "npx chromatic --project-token=e4766f9f00ee"
   },
   "eslintConfig": {
     "extends": [
@@ -69,6 +70,7 @@
     "@storybook/preset-create-react-app": "^3.1.7",
     "@storybook/react": "^6.3.0",
     "@storybook/testing-react": "^0.0.17",
+    "chromatic": "^6.0.6",
     "react-test-renderer": "^17.0.2",
     "react-testing-library": "^8.0.1"
   }
